--- a/Day5/meanGames/.env
+++ b/Day5/meanGames/.env
@@ -2,3 +2,5 @@ port = 3000
 msgServerStart = "App is running on port "
 publicFolder = "public"
 apiRoute = "/api"
+dbUrl = "mongodb://127.0.0.1:27017"
+dbName = "meanGames"
